--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <h1>Contact US</h1>
     <p>ph NO: 035545419702</p>
     <p>mail<em>ghulamaham786.gmainl.com<em></p>
-        <a href="./gm.htm">Home</a>
+        <a href="./index.html">Home</a>
         <form action="">
 
             
