--- a/hobbies.html
+++ b/hobbies.html
@@ -14,6 +14,6 @@
     </ol>
     <hr size ="3">
 <a href="./contact.html">contact</a>
-<a href="./gm.htm">Home</a>
+<a href="./index.html">Home</a>
 </body>
 </html>
